# parsy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml  main.yml
parsy/: __init__.py  utils.py
parsy/exceptions/: __init__.py
parsy/internal/: __init__.py
parsy/validator/: __init__.py
pyparsy/: __init__.py  enum_types.py  utils.py
pyparsy/exceptions/: __init__.py
pyparsy/internal/: __init__.py
pyparsy/validator/: __init__.py
tests/: test_amazon.py  test_base.py  test_ebay.py  test_google.py  test_internal.py  test_utils.py
tests/assets/: amazon_bestseller_de.html  amazon_bestseller_de.yaml  amazon_com.html  amazon_com.yaml  amazon_de_search.html  amazon_de_search.yaml  base_test.html  base_test.yaml  ebay_de.html  ebay_de.yaml  google_com.html  google_com.yaml  medium_com.html  twitter_com.html
tests/assets/invalid/: invalid_css.yaml  invalid_regex.yaml  invalid_schema.yaml  invalid_xpath.yaml
