[tool.poetry]
name = "parsy"
version = "0.1.0"
description = "HTML parsing library using YAML definitions and XPath"
authors = ["Vladimir Kolev <vladimir.r.kolev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
lxml = "^4.9.1"
schema = "^0.7.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
